syntax = "proto3";
package Hub;

message HubCreateDto {
  string userId = 1;
  optional string hubBio = 3;
  optional string hubCoverImage = 4;
  optional bool isHubMonitized = 5;
  optional bool isHubVerified = 6;
}

message HubActivateMonitizationDto {
  string id = 1;
}

message HubFindByIdDto {
  string id = 1;
}

message HubUpdateByIdDto {
  string id = 1;
  optional string hubBio = 2;
  optional string hubCoverImage = 3; 
}

message HubVerifyByIdDto {
  string id = 1;
}

message HubCreatedResponse {
  string response = 1;
  string hubId = 2;
}

message HubMonitizationActivatedResponse {
  string response = 1;
  bool isMonitized = 2;
}

message HubFindByIdResponse {
  string id = 1;
  string userId = 2;
  optional string bio = 3;
  optional bool isHubMonitized = 4;
  optional bool isHubVerified = 5;
  optional string hubCoverImage = 6;
}

message HubUpdateByIdResponse {
  string response = 1;
}

message HubVerifyByIdResponse {
  string response = 1;
}

service HubService {
  rpc createHub(HubCreateDto) returns (HubCreatedResponse) {}
  rpc activateMonitization(HubActivateMonitizationDto) returns (HubMonitizationActivatedResponse) {}
  rpc findHubById(HubFindByIdDto) returns (HubFindByIdResponse) {}
  rpc hubUpdateById(HubUpdateByIdDto) returns (HubUpdateByIdResponse) {}
  rpc hubVerify(HubVerifyByIdDto) returns (HubVerifyByIdResponse) {}
}